--- a/css/DB_Tool.css
+++ b/css/DB_Tool.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 * {margin: 0; padding: 0; border: 0;}
-ul {list-style: none;}
+ol, ul {list-style: none; padding-left: 0;}
 a {text-decoration: none;}
 
 li {text-decoration: none;}
@@ -87,22 +87,29 @@ li {text-decoration: none;}
             transition: .5s;
             border-radius: 10px;
         }
-
         .list-group {
-            width: 13%;
-            margin-right: 70px;
+            width: 18%;
+            height: 100vh;
+            padding: 30px;
+            box-sizing: border-box;
+            --bs-list-group-item-padding-x: 0;
+            --bs-list-group-item-padding-y: 0;
         }
         .list_wrap {
-            width: 100%;
-            margin-left: 20px;
+            width: 90%; 
         }
-        .list_wrap a {
+        .list_wrap>li {
             width: 100%;
-            height: 50px;
-            padding-top: 10px;
             border: 0;
+            cursor: pointer;
         }
-        .list_wrap a::before {
+        .list_wrap>li>p {
+            width: 100%;
+            height: 60px;
+            padding: 20px;
+            margin-bottom: 0;
+        }
+        .list_wrap>li>p::before {
             content: ">";
             margin-right: 10px;
         }
@@ -110,6 +117,22 @@ li {text-decoration: none;}
             background-color: cadetblue;
             border: 0px;
             font-weight: bold;
+        }
+        .list_list {
+            width: 100%;
+            display: block;
+        }
+        .list_list>li {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            padding: 20px 40px;
+            box-sizing: border-box;
+            background-color: #eee;
+        }
+        .list_list>li>a {
+            color: #000;
+            margin-bottom: 10px;
         }
 
         .section {
@@ -209,4 +232,9 @@ li {text-decoration: none;}
         .update,
         .amend {
             width: 14%;
+        }
+
+        .page {
+            display: flex;
+            justify-content: center;
         }
