--- a/css/DB_Tool.css
+++ b/css/DB_Tool.css
@@ -15,7 +15,7 @@ li {text-decoration: none;}
             box-sizing: border-box;
         }
         .inner h1 {
-            width: 13%;
+            width: 18%;
             text-align: center;
             margin: 0;
             font-size: 35px;
@@ -67,7 +67,6 @@ li {text-decoration: none;}
         .navbar_nav li {
             width: 100%;
             height: 100%;
-            transition: .5s;
         }
         .navbar_nav a {
             color: #000;
@@ -85,7 +84,6 @@ li {text-decoration: none;}
             border-bottom: 2px solid cadetblue;
             color: cadetblue;
             transition: .5s;
-            border-radius: 10px;
         }
         .list-group {
             width: 18%;
@@ -113,7 +111,8 @@ li {text-decoration: none;}
             content: ">";
             margin-right: 10px;
         }
-        .list-group-item.active {
+        .list-group-item.active,
+        .active>.page-link, .page-link.active {
             background-color: cadetblue;
             border: 0px;
             font-weight: bold;
@@ -235,6 +234,79 @@ li {text-decoration: none;}
         }
 
         .page {
+            margin-top: 50px;
             display: flex;
             justify-content: center;
+        }
+        .pagination {
+            --bs-pagination-color: black
+        }
+        .page-link:hover {
+            background-color: cadetblue;
+            color: #fff;
+        }
+
+        .buttons {
+            display: flex;
+            justify-content: space-between;
+        }
+        .delete,
+        .makeNew {
+            width: 65px;
+            height: 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .modal {
+            background-color: rgba(0,0,0,.5);
+            --bs-modal-margin: 0;
+        }
+        .modal-dialog {
+            height: 100vh;
+            margin: auto;
+        }
+        .modal-content {
+            top: 50%;
+            transform: translatey(-50%);
+            position: absolute;
+        }
+        .delete i {
+            width: 30px;
+            height: 30px;
+            background-color: rgb(239, 7, 7);
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            border-radius: 15%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+        .delete .bi-x,
+        .makeNew .bi-plus {
+            font-size: 28px;
+        }
+        .makeNew i {
+            width: 30px;
+            height: 30px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            border-radius: 15%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+        .bi-file-earmark-excel {
+            background-color: green;
+        }
+        .bi-plus {
+            background-color: rgb(0, 119, 255);
+        }
+        .bi::before, [class^="bi-"]::before, [class*=" bi-"]::before {
+            line-height: 0;
         }
