--- a/css/DB_Tool.css
+++ b/css/DB_Tool.css
@@ -6,307 +6,383 @@ a {text-decoration: none;}
 
 li {text-decoration: none;}
 
-        header {
-            width: 100%;
-            height: 60px;
-            position: relative;
-        }
-        .inner {
-            box-sizing: border-box;
-        }
-        .inner h1 {
-            width: 18%;
-            text-align: center;
-            margin: 0;
-            font-size: 35px;
-            position: absolute;
-            top: 20px;
-            left: 25px;
-        }
-        .inner>p {
-            position: absolute;
-            font-size: 20px;
-            font-weight: bold;
-            top: 20px;
-            left: 270px;
-        }
-        .profile {
-            position: absolute;
-            top: 20px;
-            right: 300px;
-        } 
-        .profile>p {
-            font-size: 14px;
-        }
-        .language {
-            position: absolute;
-            top: 20px;
-            right: 25px;
-        }
+header {
+    width: 100%;
+    height: 80px;
+}
+.header_inner {
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+}
+h1 {
+    width: 18%;
+    height: 100%;
+    text-align: center;
+    margin: 0;
+    font-size: 2vw;
+    position: absolute;
+    left: 0;
+    font-weight: bold;
+}
+.header_inner>p {
+    width: 30%;
+    height: 100%;
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+.profile {
+    width: 18%;
+    height: 100%;
+    position: absolute;
+    right: 120px;
+    display: flex;
+} 
+.pro_text p {
+    font-size: 14px;
+}
+.pro_photo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 20px;
+}
+.pro_photo img {
+    width: 100%;
+    height: 100%;
+}
+.language {
+    width: 10%;
+    height: 40px;
+    position: absolute;
+    right: 20px;
+}
 
-        .navbar {
-            width: 100%;
-            height: 60px;
-            margin-bottom: 30px;
-        }
+.navbar {
+    width: 100%;
+    height: 60px;
+    margin-bottom: 30px;
+}
 
-        .nav_container {
-            width: 100%;
-            height: 60px;
-            display: flex;
-        }
-        .navbar_nav {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 30px;
-            text-align: center;
-        }
-        .navbar_nav li {
-            width: 100%;
-            height: 100%;
-        }
-        .navbar_nav a {
-            color: #000;
-            display: block;
-            width: 100%;
-            height: 100%;
-            padding-top: 20px;
-            box-sizing: border-box;
-        }
-        .nav_brand {
-            font-size: 20px;
-            font-weight: bold;
-        }
-        .navbar_nav li:not(:first-child) a:hover {
-            border-bottom: 2px solid cadetblue;
-            color: cadetblue;
-            transition: .5s;
-        }
-        .list-group {
-            width: 18%;
-            height: 100vh;
-            padding: 30px;
-            box-sizing: border-box;
-            --bs-list-group-item-padding-x: 0;
-            --bs-list-group-item-padding-y: 0;
-        }
-        .list_wrap {
-            width: 90%; 
-        }
-        .list_wrap>li {
-            width: 100%;
-            border: 0;
-            cursor: pointer;
-        }
-        .list_wrap>li>p {
-            width: 100%;
-            height: 60px;
-            padding: 20px;
-            margin-bottom: 0;
-        }
-        .list_wrap>li>p::before {
-            content: ">";
-            margin-right: 10px;
-        }
-        .list-group-item.active,
-        .active>.page-link, .page-link.active {
-            background-color: cadetblue;
-            border: 0px;
-            font-weight: bold;
-        }
-        .list_list {
-            width: 100%;
-            display: block;
-        }
-        .list_list>li {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            padding: 20px 40px;
-            box-sizing: border-box;
-            background-color: #eee;
-        }
-        .list_list>li>a {
-            color: #000;
-            margin-bottom: 10px;
-        }
+.nav_container {
+    width: 100%;
+    height: 60px;
+    display: flex;
+}
+.navbar_nav {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px;
+    text-align: center;
+}
+.navbar_nav li {
+    width: 100%;
+    height: 100%;
+}
+.navbar_nav a {
+    color: #000;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
+    box-sizing: border-box;
+}
+.nav_brand {
+    font-size: 20px;
+    font-weight: bold;
+}
+.navbar_nav li:not(:first-child) a:hover {
+    border-bottom: 2px solid cadetblue;
+    color: cadetblue;
+    transition: .5s;
+}
+.list-group {
+    width: 18%;
+    height: 100vh;
+    padding: 30px;
+    box-sizing: border-box;
+    --bs-list-group-item-padding-x: 0;
+    --bs-list-group-item-padding-y: 0;
+}
+.list_wrap {
+    width: 90%; 
+}
+.list_wrap>li {
+    width: 100%;
+    border: 0;
+    cursor: pointer;
+}
+.list_wrap>li>p {
+    width: 100%;
+    height: 60px;
+    padding: 20px;
+    margin-bottom: 0;
+}
+.list_wrap>li>p::before {
+    content: ">";
+    margin-right: 10px;
+}
+.list-group-item.active,
+.active>.page-link, .page-link.active {
+    background-color: cadetblue;
+    border: 0px;
+    font-weight: bold;
+}
+.list_list {
+    width: 100%;
+    display: block;
+}
+.list_list>li {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 40px;
+    box-sizing: border-box;
+    background-color: #eee;
+}
+.list_list>li>a {
+    color: #000;
+    margin-bottom: 10px;
+}
 
-        .section {
-            display: flex;
-        }
-        .section h3 {
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
+.section {
+    display: flex;
+}
+.section h3 {
+    margin-bottom: 10px;
+    font-weight: bold;
+}
 
-        section {
-            padding-top: 30px;
-            width: 80%;
-        }
-        .section_wrap {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-        .section_wrap p {
-            padding-top: 10px;
-            box-sizing: border-box;
-            margin-bottom: 10px;
-        }
-        .form-select {
-            width: 200px;
-            height: 40px;
-        }
+section {
+    padding-top: 30px;
+    width: 80%;
+}
+.section_wrap {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.section_wrap p {
+    padding-top: 10px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
 
-        .section_search {
-            width: 100%;
-            
-            padding: 20px;
-            margin-bottom: 20px;
-            border: 1px solid #eee;
-        }
-        .search_wrap {
-            width: 80%;
-            display: flex;
-            flex-wrap: wrap;
-            box-sizing: border-box;
-        }
-        .search {
-            width: 20%;
-            height: 40px;
-            margin: 0 10px 15px 0;
-        }
-        .search_icon {
-            width: 90px;
-            height: 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .search_icon i {
-            width: 40px;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 10%;
-            font-weight: 900;
-            font-size: 18px;
-        }
-        .bi-search {
-            background-color: gold;
-        }
-        .bi-arrow-clockwise {
-            background-color: red;
-            color: #fff;
-        }
+.section_search {
+    width: 100%;
+    
+    padding: 20px;
+    margin-bottom: 20px;
+    border: 1px solid #eee;
+}
+.search_wrap {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+}
+.search {
+    width: 20%;
+    height: 40px;
+    margin: 0 10px 15px 0;
+}
+.search_icon {
+    width: 90px;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.search_icon i {
+    width: 40px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10%;
+    font-weight: 900;
+    font-size: 18px;
+}
+.bi-search {
+    background-color: gold;
+}
+.bi-arrow-clockwise {
+    background-color: red;
+    color: #fff;
+}
 
-        tbody td,
-        tbody th {
-            border: 1px solid #ddd;
-            box-sizing: border-box;
-        }
-        tbody>tr:nth-child(2n-1) {
-            background-color: #eee;
-        }
-        thead {
-            background-color: cadetblue;
-            color: #fff;
-        }
+tbody td,
+tbody th {
+    border: 1px solid #ddd;
+    box-sizing: border-box;
+}
+tbody>tr:nth-child(2n-1) {
+    background-color: #eee;
+}
+thead {
+    background-color: cadetblue;
+    color: #fff;
+}
 
-        .order,
-        .order_2,
-        .use {
-            width: 4%;
-        }
-        .country_name {
-            width: 10%;
-        }
-        .country_name_en,
-        .country_code,
-        .country_code_3,
-        .update,
-        .amend {
-            width: 14%;
-        }
+.order,
+.order_2,
+.use {
+    width: 4%;
+}
+.country_name {
+    width: 10%;
+}
+.country_name_en,
+.country_code,
+.country_code_3,
+.update,
+.amend {
+    width: 14%;
+}
 
-        .page {
-            margin-top: 50px;
-            display: flex;
-            justify-content: center;
-        }
-        .pagination {
-            --bs-pagination-color: black
-        }
-        .page-link:hover {
-            background-color: cadetblue;
-            color: #fff;
-        }
+.page {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+.pagination {
+    --bs-pagination-color: black
+}
+.page-link:hover {
+    background-color: cadetblue;
+    color: #fff;
+}
 
-        .buttons {
-            display: flex;
-            justify-content: space-between;
-        }
-        .delete,
-        .makeNew {
-            width: 65px;
-            height: 30px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+.buttons {
+    display: flex;
+    justify-content: space-between;
+}
+.delete,
+.makeNew {
+    width: 65px;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-        .modal {
-            background-color: rgba(0,0,0,.5);
-            --bs-modal-margin: 0;
-        }
-        .modal-dialog {
-            height: 100vh;
-            margin: auto;
-        }
-        .modal-content {
-            top: 50%;
-            transform: translatey(-50%);
-            position: absolute;
-        }
-        .delete i {
-            width: 30px;
-            height: 30px;
-            background-color: rgb(239, 7, 7);
-            color: #fff;
-            font-weight: bold;
-            font-size: 18px;
-            border-radius: 15%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-        }
-        .delete .bi-x,
-        .makeNew .bi-plus {
-            font-size: 28px;
-        }
-        .makeNew i {
-            width: 30px;
-            height: 30px;
-            color: #fff;
-            font-weight: bold;
-            font-size: 18px;
-            border-radius: 15%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-        }
-        .bi-file-earmark-excel {
-            background-color: green;
-        }
-        .bi-plus {
-            background-color: rgb(0, 119, 255);
-        }
-        .bi::before, [class^="bi-"]::before, [class*=" bi-"]::before {
-            line-height: 0;
-        }
+.modal {
+    background-color: rgba(0,0,0,.5);
+    --bs-modal-margin: 0;
+}
+.modal-dialog {
+    height: 100vh;
+    margin: auto;
+}
+.modal-content {
+    top: 50%;
+    transform: translatey(-50%);
+    position: absolute;
+}
+.delete i {
+    width: 30px;
+    height: 30px;
+    background-color: rgb(239, 7, 7);
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.delete .bi-x,
+.makeNew .bi-plus {
+    font-size: 28px;
+}
+.makeNew i {
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.bi-file-earmark-excel {
+    background-color: green;
+}
+.bi-plus {
+    background-color: rgb(0, 119, 255);
+}
+.bi::before, [class^="bi-"]::before, [class*=" bi-"]::before {
+    line-height: 0;
+}
+
+/* DB_Tool_02 */
+.db_wrap {
+    width: 100%;
+    padding: 30px;
+    box-sizing: border-box;
+}
+.db_inner ul li {
+    display: flex;
+    flex-direction: column;
+}
+.db_inner ul li label {
+    margin-bottom: 5px;
+}
+.db_inner ul li input,
+.db_inner ul li select,
+.db_inner ul li textarea {
+    width: 45%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #eee;
+}
+.db_inner ul li input,
+.db_inner ul li select {
+    height: 40px;
+    margin-bottom: 15px;
+}
+.essential::after {
+    content: "*";
+    color: red;
+    margin-left: 3px;
+}
+.db_right {
+    left: 60%;
+    position: absolute;
+    width: 80%;
+}
+.icon_wrap {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+    box-sizing: border-box;
+}
+.icon_wrap i {
+    width: 30px;
+    height: 30px;
+    border-radius: 10%;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bi-list {
+    background-color: slategray;
+}
+.bi-bookmark {
+    background-color: green;
+}
