--- a/css/DB_Tool.css
+++ b/css/DB_Tool.css
@@ -109,7 +109,6 @@ h1 {
 }
 .list-group {
     width: 18%;
-    height: 100vh;
     padding: 30px;
     box-sizing: border-box;
     --bs-list-group-item-padding-x: 0;
@@ -158,6 +157,7 @@ h1 {
 
 .section {
     display: flex;
+    margin-bottom: 40px;
 }
 .section h3 {
     margin-bottom: 10px;
@@ -173,6 +173,9 @@ section {
     justify-content: space-between;
     margin-bottom: 10px;
 }
+.form-select {
+    width: 10%;
+}
 .section_wrap p {
     padding-top: 10px;
     box-sizing: border-box;
@@ -181,7 +184,6 @@ section {
 
 .section_search {
     width: 100%;
-    
     padding: 20px;
     margin-bottom: 20px;
     border: 1px solid #eee;
@@ -329,23 +331,57 @@ thead {
     line-height: 0;
 }
 
+footer {
+    width: 100%;
+    height: 200px;
+    background-color: cadetblue;
+    color: #eee;
+}
+.foot_inner {
+    width: 100%;
+    height: 200px;
+    padding: 50px;
+    box-sizing: border-box;
+    text-align: center;
+    position: absolute;
+}
+.foot_text {
+    display: flex;
+    justify-content: center;
+}
+.foot_text p:not(:last-child)::after {
+    content: "|";
+    margin: 0 10px;
+}
+
+
+
+
+
+
 /* DB_Tool_02 */
 .db_wrap {
     width: 100%;
     padding: 30px;
     box-sizing: border-box;
 }
+.db_inner {
+    width: 100%;
+    position: relative;
+}
 .db_inner ul li {
+    width: 45%;
     display: flex;
     flex-direction: column;
 }
 .db_inner ul li label {
+    width: 100%;
     margin-bottom: 5px;
 }
 .db_inner ul li input,
 .db_inner ul li select,
 .db_inner ul li textarea {
-    width: 45%;
+    width: 100%;
     padding: 10px;
     box-sizing: border-box;
     border: 1px solid #eee;
@@ -361,15 +397,12 @@ thead {
     margin-left: 3px;
 }
 .db_right {
-    left: 60%;
+    left: 50%;
     position: absolute;
-    width: 80%;
 }
 .icon_wrap {
     display: flex;
     justify-content: space-between;
-    padding: 0 30px;
-    box-sizing: border-box;
 }
 .icon_wrap i {
     width: 30px;
