--- a/css/DB_Tool.css
+++ b/css/DB_Tool.css
@@ -378,13 +378,18 @@ footer {
     width: 100%;
     margin-bottom: 5px;
 }
+.essential_i {
+    border: 1px solid red;
+    box-sizing: border-box;
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    border-radius: 10px;
+}
 .db_inner ul li input,
 .db_inner ul li select,
 .db_inner ul li textarea {
     width: 100%;
     padding: 0 10px;
     box-sizing: border-box;
-    border: 1px solid #eee;
 }
 .db_inner ul li select {
     border-radius: 10px;
